--- a/main.html
+++ b/main.html
@@ -19,12 +19,14 @@
     <div class="main-page">
       <div class="header-placeholder"></div> <!--placeholder space below header to prevent clipping of contents with main page-->
       <div class="section">
-        <div class="viewcard">
-          <img class="card-image" src="gallery/1.png">
-          <div class="card-name">
-            <h3>Enrolment</h3>
+        <a href="enrolment.html">
+          <div class="viewcard">
+            <img class="card-image" src="gallery/1.png">
+            <div class="card-name">
+              <h3>Enrolment</h3>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
       <div class="section">
         <div class="viewcard">
