added expandable content on processes

--- a/enrolment.html
+++ b/enrolment.html
@@ -6,8 +6,6 @@
     <title>Enrolment Page: ByStep</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="enrolment.css">
-    <script src="script.js" async>
-    </script>
   </head>
 
   <body>
@@ -18,63 +16,127 @@
     <div class="main-page">
       <div class="header-placeholder"></div> <!--placeholder space below header to prevent cdivpping of contents with main page-->
       <div class="step-container">
-        <div class="step container-one ">
-          1. Registrar's Office
-          <div class="radio-container">
+        <div class="step container-one "> <!--step 1-->
+          <div class="radio-container"> <!--button-->
             <input class="radio-btn" type="radio" value="BoxOne">
+          </div>          
+          <div class="step-title"> <!--info container-->
+            <div class="radio-label"><p>1. Registrar's Office</p></div> <!--step label-->
+            <div class="step-collapsible"> <!--step expand-->
+              <p class="step-location">Expandable section for location.</p>
+              <p class="step-requirement">Expandable section for requirement.</p>
+              <p class="step-process">Expandable section for process.</p>
+            </div>
           </div>
+          
         </div>
-        <div class="step container-two">
-          2. HAC's Office
-          <div class="radio-container">
+        <div class="step container-two"> <!--step 2-->
+          <div class="radio-container"><!--button-->
             <input class="radio-btn" type="radio" value="BoxTwo" disabled>
           </div>
+          <div class="step-title"><!--info container-->
+            <div class="radio-label"><p>2. HAC's Office</p></div><!--step label-->
+            <div class="step-collapsible"><!--step expand-->
+              <p class="step-location">Expandable section for location.</p>
+              <p class="step-requirement">Expandable section for requirement.</p>
+              <p class="step-process">Expandable section for process.</p>
+            </div>
+          </div>
         </div>
-        <div class="step container-three">
-          3. Assessment's Office
-          <div class="radio-container">
+        <div class="step container-three"> <!--step 3-->
+          <div class="radio-container"><!--button-->
             <input class="radio-btn" type="radio" value="BoxThree" disabled>
           </div>
+          <div class="step-title"><!--info container-->
+            <div class="radio-label"><p>3. Assessment's Office</p></div><!--step label-->
+            <div class="step-collapsible"><!--step expand-->
+              <p class="step-location">Expandable section for location.</p>
+              <p class="step-requirement">Expandable section for requirement.</p>
+              <p class="step-process">Expandable section for process.</p>
+            </div>
+          </div>
         </div>
-        <div class="step container-four">
-          4. Treasurer's Office
-          <div class="radio-container">
+        <div class="step container-four"> <!--step 4-->
+          <div class="radio-container"><!--button-->
             <input class="radio-btn" type="radio" value="BoxFour" disabled>
           </div>
+          <div class="step-title"><!--info container-->
+            <div class="radio-label"><p>4. Treasurer's Office</p></div><!--step label-->
+            <div class="step-collapsible"> <!--step expand-->
+              <p class="step-location">Expandable section for location.</p>
+              <p class="step-requirement">Expandable section for requirement.</p>
+              <p class="step-process">Expandable section for process.</p>
+            </div>
+          </div>
         </div>
-        <div class="step container-five">
-          5. Library
-          <div class="radio-container">
+        <div class="step container-five"> <!--step 5-->
+          <div class="radio-container"><!--button-->
             <input class="radio-btn" type="radio" value="BoxFive" disabled>
           </div>
+          <div class="step-title"><!--info container-->
+            <div class="radio-label"><p>5. Library</p></div><!--step label-->
+            <div class="step-collapsible"><!--step expand-->
+              <p class="step-location">Expandable section for location.</p>
+              <p class="step-requirement">Expandable section for requirement.</p>
+              <p class="step-process">Expandable section for process.</p>
+            </div>
+          </div>
         </div>
-        <div class="step container-six">
-          6. Guidance Office
-          <div class="radio-container">
+        <div class="step container-six"> <!--step 6-->
+          <div class="radio-container"><!--button-->
             <input class="radio-btn" type="radio" value="BoxSix" disabled>
           </div>
+          <div class="step-title"><!--info container-->
+            <div class="radio-label"><p>6. Guidance Office</p></div><!--step label-->
+            <div class="step-collapsible"><!--step expand-->
+              <p class="step-location">Expandable section for location.</p>
+              <p class="step-requirement">Expandable section for requirement.</p>
+              <p class="step-process">Expandable section for process.</p>
+            </div>
+          </div>
+          
         </div>
-        <div class="step container-seven">
-          7. EVP Office
-          <div class="radio-container">
+        <div class="step container-seven"> <!--step 7-->
+          <div class="radio-container"><!--button-->
             <input class="radio-btn" type="radio" value="BoxSeven" disabled>
           </div>
-        </div>
-        <div class="step container-eight">
-          8. Registrar's Office
-          <div class="radio-container">
-            <input class="radio-btn" type="radio" value="BoxEight" disabled>
+          <div class="step-title"><!--info container-->
+            <div class="radio-label"><p>7. EVP Office</p></div><!--step label-->
+            <div class="step-collapsible"><!--step expand-->
+              <p class="step-location">Expandable section for location.</p>
+              <p class="step-requirement">Expandable section for requirement.</p>
+              <p class="step-process">Expandable section for process.</p>
+            </div>
           </div>
         </div>
-        <div class="step container-nine">
-          9. Internet Lab
-          <div class="radio-container">
+        <div class="step container-eight"> <!--step 8-->
+          <div class="radio-container"><!--button-->
+            <input class="radio-btn" type="radio" value="BoxEight" disabled>
+          </div>
+          <div class="step-title"><!--info container-->
+            <div class="radio-label"><p>8. Registrar's Office</p></div><!--step label-->
+            <div class="step-collapsible"><!--step expand-->
+              <p class="step-location">Expandable section for location.</p>
+              <p class="step-requirement">Expandable section for requirement.</p>
+              <p class="step-process">Expandable section for process.</p>
+            </div>
+          </div>
+        </div>
+        <div class="step container-nine"> <!--step 9-->
+          <div class="radio-container"><!--button-->
             <input class="radio-btn" type="radio" value="BoxNine" disabled>
+          </div>
+          <div class="step-title"><!--info container-->
+            <div class="radio-label"><p>9. Internet Lab</p></div><!--step label-->
+            <div class="step-collapsible"><!--step expand-->
+              <p class="step-location">Expandable section for location.</p>
+              <p class="step-requirement">Expandable section for requirement.</p>
+              <p class="step-process">Expandable section for process.</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
   
-  <script src="script.js"></script>
-  
+    <script src="script.js" defer></script>
   </body>
