added auto expand and auto close on steps section

--- a/enrolment.html
+++ b/enrolment.html
@@ -6,6 +6,9 @@
     <title>Enrolment Page: ByStep</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="enrolment.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -23,9 +26,9 @@
           <div class="step-title"> <!--info container-->
             <div class="radio-label"><p>1. Registrar's Office</p></div> <!--step label-->
             <div class="step-collapsible"> <!--step expand-->
-              <p class="step-location">Expandable section for location.</p>
-              <p class="step-requirement">Expandable section for requirement.</p>
-              <p class="step-process">Expandable section for process.</p>
+              <p class="step-location">LOCATION</p>
+              <p class="step-requirement">REQUIREMENTS</p>
+              <p class="step-process">PROCESS</p>
             </div>
           </div>
           
@@ -37,9 +40,9 @@
           <div class="step-title"><!--info container-->
             <div class="radio-label"><p>2. HAC's Office</p></div><!--step label-->
             <div class="step-collapsible"><!--step expand-->
-              <p class="step-location">Expandable section for location.</p>
-              <p class="step-requirement">Expandable section for requirement.</p>
-              <p class="step-process">Expandable section for process.</p>
+              <p class="step-location">LOCATION</p>
+              <p class="step-requirement">REQUIREMENTS</p>
+              <p class="step-process">PROCESS</p>
             </div>
           </div>
         </div>
@@ -50,9 +53,9 @@
           <div class="step-title"><!--info container-->
             <div class="radio-label"><p>3. Assessment's Office</p></div><!--step label-->
             <div class="step-collapsible"><!--step expand-->
-              <p class="step-location">Expandable section for location.</p>
-              <p class="step-requirement">Expandable section for requirement.</p>
-              <p class="step-process">Expandable section for process.</p>
+              <p class="step-location">LOCATION</p>
+              <p class="step-requirement">REQUIREMENTS</p>
+              <p class="step-process">PROCESS</p>
             </div>
           </div>
         </div>
@@ -63,9 +66,9 @@
           <div class="step-title"><!--info container-->
             <div class="radio-label"><p>4. Treasurer's Office</p></div><!--step label-->
             <div class="step-collapsible"> <!--step expand-->
-              <p class="step-location">Expandable section for location.</p>
-              <p class="step-requirement">Expandable section for requirement.</p>
-              <p class="step-process">Expandable section for process.</p>
+              <p class="step-location">LOCATION</p>
+              <p class="step-requirement">REQUIREMENTS</p>
+              <p class="step-process">PROCESS</p>
             </div>
           </div>
         </div>
@@ -76,9 +79,9 @@
           <div class="step-title"><!--info container-->
             <div class="radio-label"><p>5. Library</p></div><!--step label-->
             <div class="step-collapsible"><!--step expand-->
-              <p class="step-location">Expandable section for location.</p>
-              <p class="step-requirement">Expandable section for requirement.</p>
-              <p class="step-process">Expandable section for process.</p>
+              <p class="step-location">LOCATION</p>
+              <p class="step-requirement">REQUIREMENTS</p>
+              <p class="step-process">PROCESS</p>
             </div>
           </div>
         </div>
@@ -89,9 +92,9 @@
           <div class="step-title"><!--info container-->
             <div class="radio-label"><p>6. Guidance Office</p></div><!--step label-->
             <div class="step-collapsible"><!--step expand-->
-              <p class="step-location">Expandable section for location.</p>
-              <p class="step-requirement">Expandable section for requirement.</p>
-              <p class="step-process">Expandable section for process.</p>
+              <p class="step-location">LOCATION</p>
+              <p class="step-requirement">REQUIREMENTS</p>
+              <p class="step-process">PROCESS</p>
             </div>
           </div>
           
@@ -103,9 +106,9 @@
           <div class="step-title"><!--info container-->
             <div class="radio-label"><p>7. EVP Office</p></div><!--step label-->
             <div class="step-collapsible"><!--step expand-->
-              <p class="step-location">Expandable section for location.</p>
-              <p class="step-requirement">Expandable section for requirement.</p>
-              <p class="step-process">Expandable section for process.</p>
+              <p class="step-location">LOCATION</p>
+              <p class="step-requirement">REQUIREMENTS</p>
+              <p class="step-process">PROCESS</p>
             </div>
           </div>
         </div>
@@ -116,9 +119,9 @@
           <div class="step-title"><!--info container-->
             <div class="radio-label"><p>8. Registrar's Office</p></div><!--step label-->
             <div class="step-collapsible"><!--step expand-->
-              <p class="step-location">Expandable section for location.</p>
-              <p class="step-requirement">Expandable section for requirement.</p>
-              <p class="step-process">Expandable section for process.</p>
+              <p class="step-location">LOCATION</p>
+              <p class="step-requirement">REQUIREMENTS</p>
+              <p class="step-process">PROCESS</p>
             </div>
           </div>
         </div>
@@ -129,9 +132,9 @@
           <div class="step-title"><!--info container-->
             <div class="radio-label"><p>9. Internet Lab</p></div><!--step label-->
             <div class="step-collapsible"><!--step expand-->
-              <p class="step-location">Expandable section for location.</p>
-              <p class="step-requirement">Expandable section for requirement.</p>
-              <p class="step-process">Expandable section for process.</p>
+              <p class="step-location">LOCATION</p>
+              <p class="step-requirement">REQUIREMENTS</p>
+              <p class="step-process">PROCESS</p>
             </div>
           </div>
         </div>
