added hover effect

--- a/enrolment.html
+++ b/enrolment.html
@@ -13,7 +13,7 @@
 
   <body>
     <header class="header">
-      <img class="text-logo" src="ico/incognito.svg" width="150px">
+      <a href="index.html"><img class="text-logo" src="ico/incognito.svg" width="150px"></a>
     </header>
 
     <div class="main-page">
