efficient checkbox completion

--- a/enrolment.html
+++ b/enrolment.html
@@ -26,9 +26,18 @@
           <div class="step-title"> <!--info container-->
             <div class="radio-label"><p>1. Registrar's Office</p></div> <!--step label-->
             <div class="step-collapsible"> <!--step expand-->
-              <p class="step-location">LOCATION</p>
-              <p class="step-requirement">REQUIREMENTS</p>
-              <p class="step-process">PROCESS</p>
+              <div class="step-location">
+                <p>LOCATION</p>
+                <div id="enr-loc-s01"></div>
+              </div>
+              <div class="step-requirement">
+                <p>REQUIREMENTS</p>
+                <div id="enr-req-s01"></div>
+              </div>
+              <div class="step-process">
+                <p>PROCESS</p>
+                <div id="enr-pro-s01"></div>
+              </div>
             </div>
           </div>
           
@@ -40,9 +49,11 @@
           <div class="step-title"><!--info container-->
             <div class="radio-label"><p>2. HAC's Office</p></div><!--step label-->
             <div class="step-collapsible"><!--step expand-->
-              <p class="step-location">LOCATION</p>
-              <p class="step-requirement">REQUIREMENTS</p>
-              <p class="step-process">PROCESS</p>
+              <div class="step-location">
+                <p>LOCATION</p>
+              </div>
+              <div class="step-requirement"><p>REQUIREMENTS</p></div>
+              <div class="step-process"><p>PROCESS</p></div>
             </div>
           </div>
         </div>
@@ -53,9 +64,9 @@
           <div class="step-title"><!--info container-->
             <div class="radio-label"><p>3. Assessment's Office</p></div><!--step label-->
             <div class="step-collapsible"><!--step expand-->
-              <p class="step-location">LOCATION</p>
-              <p class="step-requirement">REQUIREMENTS</p>
-              <p class="step-process">PROCESS</p>
+              <div class="step-location"><p>LOCATION</p></div>
+              <div class="step-requirement"><p>REQUIREMENTS</p></div>
+              <div class="step-process"><p>PROCESS</p></div>
             </div>
           </div>
         </div>
@@ -66,9 +77,9 @@
           <div class="step-title"><!--info container-->
             <div class="radio-label"><p>4. Treasurer's Office</p></div><!--step label-->
             <div class="step-collapsible"> <!--step expand-->
-              <p class="step-location">LOCATION</p>
-              <p class="step-requirement">REQUIREMENTS</p>
-              <p class="step-process">PROCESS</p>
+              <div class="step-location"><p>LOCATION</p></div>
+              <div class="step-requirement"><p>REQUIREMENTS</p></div>
+              <div class="step-process"><p>PROCESS</p></div>
             </div>
           </div>
         </div>
@@ -79,9 +90,9 @@
           <div class="step-title"><!--info container-->
             <div class="radio-label"><p>5. Library</p></div><!--step label-->
             <div class="step-collapsible"><!--step expand-->
-              <p class="step-location">LOCATION</p>
-              <p class="step-requirement">REQUIREMENTS</p>
-              <p class="step-process">PROCESS</p>
+              <div class="step-location"><p>LOCATION</p></div>
+              <div class="step-requirement"><p>REQUIREMENTS</p></div>
+              <div class="step-process"><p>PROCESS</p></div>
             </div>
           </div>
         </div>
@@ -92,9 +103,9 @@
           <div class="step-title"><!--info container-->
             <div class="radio-label"><p>6. Guidance Office</p></div><!--step label-->
             <div class="step-collapsible"><!--step expand-->
-              <p class="step-location">LOCATION</p>
-              <p class="step-requirement">REQUIREMENTS</p>
-              <p class="step-process">PROCESS</p>
+              <div class="step-location"><p>LOCATION</p></div>
+              <div class="step-requirement"><p>REQUIREMENTS</p></div>
+              <div class="step-process"><p>PROCESS</p></div>
             </div>
           </div>
           
@@ -106,9 +117,9 @@
           <div class="step-title"><!--info container-->
             <div class="radio-label"><p>7. EVP Office</p></div><!--step label-->
             <div class="step-collapsible"><!--step expand-->
-              <p class="step-location">LOCATION</p>
-              <p class="step-requirement">REQUIREMENTS</p>
-              <p class="step-process">PROCESS</p>
+              <div class="step-location"><p>LOCATION</p></div>
+              <div class="step-requirement"><p>REQUIREMENTS</p></div>
+              <div class="step-process"><p>PROCESS</p></div>
             </div>
           </div>
         </div>
@@ -119,9 +130,9 @@
           <div class="step-title"><!--info container-->
             <div class="radio-label"><p>8. Registrar's Office</p></div><!--step label-->
             <div class="step-collapsible"><!--step expand-->
-              <p class="step-location">LOCATION</p>
-              <p class="step-requirement">REQUIREMENTS</p>
-              <p class="step-process">PROCESS</p>
+              <div class="step-location"><p>LOCATION</p></div>
+              <div class="step-requirement"><p>REQUIREMENTS</p></div>
+              <div class="step-process"><p>PROCESS</p></div>
             </div>
           </div>
         </div>
@@ -132,9 +143,9 @@
           <div class="step-title"><!--info container-->
             <div class="radio-label"><p>9. Internet Lab</p></div><!--step label-->
             <div class="step-collapsible"><!--step expand-->
-              <p class="step-location">LOCATION</p>
-              <p class="step-requirement">REQUIREMENTS</p>
-              <p class="step-process">PROCESS</p>
+              <div class="step-location"><p>LOCATION</p></div>
+              <div class="step-requirement"><p>REQUIREMENTS</p></div>
+              <div class="step-process"><p>PROCESS</p></div>
             </div>
           </div>
         </div>
@@ -142,4 +153,5 @@
     </div>
   
     <script src="script.js" defer></script>
+    <script src="contentload.js" defer></script>
   </body>
