added other processes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="viewcard">
           <img class="card-image" src="gallery/1.png">
           <div class="card-name">
-            <h3>Clearance</h3>
+            <h3>Transcript of Records</h3>
           </div>
         </div>
       </div>
@@ -59,7 +59,7 @@
         <div class="viewcard">
           <img class="card-image" src="gallery/2.png">
           <div class="card-name">
-            <h3>Clearance</h3>
+            <h3>ID Renewal</h3>
           </div>
         </div>
       </div>
@@ -67,7 +67,7 @@
         <div class="viewcard">
           <img class="card-image" src="gallery/3.png">
           <div class="card-name">
-            <h3>Clearance</h3>
+            <h3>Excuse Letter</h3>
           </div>
         </div>
       </div>
