added content for enrollment

--- a/process-contents/enrolcontent.html
+++ b/process-contents/enrolcontent.html
@@ -1,10 +1,21 @@
-<div id="one" class="content">
-  <h5>What To Do</h5>
-  <p class="subcontent">Get enrolment form from the Student Assistant in-charge
+<!--Heading Section-->
+<h4 id="head-1">Get Enrollment Form</h4>
+<h4 id="head-2">Fill Out Enrollment Form</h4>
+<h4 id="head-3">Proceed to HAC's Office</h4>
+<h4 id="head-4">Get an Assessment</h4>
+<h4 id="head-5">Pay At The Treasurer's Office</h4>
+<h4 id="head-6">Go To The Guidance Office</h4>
+<h4 id="head-7">Go To The Library</h4>
+<h4 id="head-8">Proceed To The EVP Office</h4>
+<h4 id="head-9">Return To The Registrar's Office</h4>
+<h4 id="head-10">For Freshmen and Transferees</h4>
+<!--Content Section-->
+<div id="content-1" class="content">
+  <h5>What To Do:</h5>
+  <p>Get enrolment form from the Student Assistant in-charge
     at the given designated area of the school.</p>
-
-  <h5>What You'll Need</h5>
-  <ul class="subcontent">
+  <h5>What You'll Need:</h5>
+  <ul class="collapsible-content">
     <li>
       <h5 class="collapsible-header">Old Students</h5>
       <ul class="collapsible-panel">
@@ -12,27 +23,130 @@
       </ul>
     </li>
     <li>
-      <h5 class="collapsible-header">New Students</h5>
-      <ul class="collapsible-panel">
-        <li>Senior High School Report Card (Form 138)</li>
-        <li>Senior High School Certificate of Good Moral Character</li>
-        <li>One (1) copy of 1x1 ID picture</li>
-        <li>Photocopy of Birth Certificate from P.S.A.</li>
-      </ul>
+        <h5 class="collapsible-header">New Students</h5>
+        <ul class="collapsible-panel">
+          <li>Senior High School Report Card (Form 138)</li>
+          <li>Senior High School Certificate of Good Moral Character</li>
+          <li>One (1) copy of 1x1 ID picture</li>
+          <li>Photocopy of Birth Certificate from P.S.A.</li>
+        </ul>
     </li>
     <li>
-      <h5 class="collapsible-header">Transferees</h5>
-      <ul class="collapsible-panel">
-        <li>Honorable Dismissal from last school attended</li>
-        <li>Certificate of Good Moral Character from the last school attended</li>
-        <li>One (1) copy of 1x1 ID picture</li>
-        <li>Photocopy of Birth Certificate from P.S.A.</li>
+        <h5 class="collapsible-header">Transferees</h5>
+        <ul class="collapsible-panel">
+          <li>Honorable Dismissal from last school attended</li>
+          <li>Certificate of Good Moral Character from the last school attended</li>
+          <li>One (1) copy of 1x1 ID picture</li>
+          <li>Photocopy of Birth Certificate from P.S.A.</li>
+        </ul>
+    </li>
+  </ul>
+</div>
+<div id="content-2" class="content">
+  <h5>What To Do:</h5>
+  <p>Fill out necessary information in the Enrolment Form and seek advice from the Registrar for the subject loading. <br> Look for:</p>
+  <ul class="listed-content">
+    <li>
+      <strong>Engr. Arnulfo M. Distor Sr.</strong> for Engineering, Accountancy, Computer Science & Hospitality Management
+    </li>
+    <li>
+      <strong>Mrs. Nelia S. De Manuel</strong> for Information Technology, Business Administration & Office Administration
+    </li>
+    <li>
+      <strong>Mrs. Nelia S. De Manuel</strong>, NSTP Coordinator for Freshmen enrollees
+    </li>
+  </ul>
+  <h5>Where To Go:</h5>
+  <p>1st Floor, Building D</p>
+</div>
+<div id="content-3" class="content">
+  <h5>Where To Go:</h5>
+  <p>1st Floor, Building D</p>
+  <h5>What You'll Need:</h5>
+  <ul class="listed-content">
+    <li><h5>Old Students</h5>
+      <ul>
+        <li>School Identification Card (ID)</li>
       </ul>
     </li>
   </ul>
 </div>
-
-<div id="two" class="content">
-  <p>This is a sample content for step 2</p>
-  <p>This is a sample content again.</p>
+<div id="content-4" class="content">
+  <h5>Where To Go:</h5>
+  <p>1st Floor, Building B</p>
+  <h5>What You'll Need:</h5>
+  <ul class="listed-content">
+    <li><h5>Old Students</h5>
+      <ul>
+        <li>Final Clearance and Blue Form of previous semester</li>
+      </ul>
+    </li>
+  </ul>
+</div>
+<div id="content-5" class="content">
+  <h5>Where To Go:</h5>
+  <p>1st Floor, Building D</p>
+</div>
+<div id="content-6" class="content">
+  <h5>Where To Go:</h5>
+  <p>2nd Floor, Building A</p>
+  <h5>What You'll Need:</h5>
+    <ul class="listed-content">
+      <li><h5>Old Students</h5>
+        <ul>
+          <li>Blue Form of previous semester</li>
+        </ul>
+      </li>
+      <li><h5>Freshmen and Transferees</h5>
+        <ul>
+          <li>1 long white folder</li>
+          <li>1 copy of 1x1 ID picture</li>
+          <li>Accomplishment of Student Information Sheet</li>
+        </ul>
+      </li>
+    </ul>
+</div>
+<div id="content-7" class="content">
+  <h5>Where To Go:</h5>
+  <p>4th Floor, Building C</p>
+  <h5>What You'll Need:</h5>
+  <ul class="listed-content">
+    <li><h5>Old Students</h5>
+      <ul>
+        <li>Blue Form of previous semester</li>
+      </ul>
+    </li>
+    <li><h5>Freshmen and Transferees</h5>
+      <ul>
+        <li>2 copies of 1x1 ID picture</li>
+        <li>Blue Form (Officially Enrolled)</li>
+        <li>Php 12.00 for lamination</li>
+      </ul>
+    </li>
+  </ul>
+</div>
+<div id="content-8" class="content">
+  <h5>Where To Go:</h5>
+  <p>1st Floor, Building D</p>
+  <h5>What You'll Need:</h5>
+  <p>Blue Form</p>
+</div>
+<div id="content-9" class="content">
+  <h5>What To Do:</h5>
+  <p>Return to the Registrar's Office for you to be recorded as officially enrolled.</p>
+  <h5>Where To Go:</h5>
+  <p>1st Floor, Building D</p>
+  <h5>What You'll Need:</h5>
+  <p>Blue Form</p>
+</div>
+<div id="content-10" class="content">
+  <h5>What To Do:</h5>
+  <p>For freshmen and transferees, proceed to the Internet Laboratory for your School ID.</p>
+  <h5>Where To Go:</h5>
+  <p>3rd Floor, Building B</p>
+  <h5>What You'll Need:</h5>
+  <ul>
+    <li>Blue Form</li>
+    <li>Polo Shirt with collar in any color </li>
+  </ul>
 </div>
