change css file name and some bug fixes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Main Page: ByStep</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="script.js"></script>
@@ -25,7 +25,7 @@
           <div class="viewcard">
             <img class="card-image" src="gallery/1.png">
             <div class="card-name">
-              <h3>Enrolment</h3>
+              <h4>Enrolment</h4>
             </div>
           </div>
         </a>
@@ -34,7 +34,7 @@
         <div class="viewcard">
           <img class="card-image" src="gallery/2.png">
           <div class="card-name">
-            <h3>Clearance</h3>
+            <h4>Clearance</h4>
           </div>
         </div>
       </div>
@@ -42,7 +42,7 @@
         <div class="viewcard">
           <img class="card-image" src="gallery/3.png">
           <div class="card-name">
-            <h3>Scholarship</h3>
+            <h4>Scholarship</h4>
           </div>
         </div>
       </div>
@@ -50,7 +50,7 @@
         <div class="viewcard">
           <img class="card-image" src="gallery/1.png">
           <div class="card-name">
-            <h3>Transcript of Records</h3>
+            <h4>Transcript of Records</h4>
           </div>
         </div>
       </div>
@@ -58,7 +58,7 @@
         <div class="viewcard">
           <img class="card-image" src="gallery/2.png">
           <div class="card-name">
-            <h3>ID Renewal</h3>
+            <h4>ID Renewal</h4>
           </div>
         </div>
       </div>
@@ -66,7 +66,7 @@
         <div class="viewcard">
           <img class="card-image" src="gallery/3.png">
           <div class="card-name">
-            <h3>Excuse Letter</h3>
+            <h4>Excuse Letter</h4>
           </div>
         </div>
       </div>
