--- a/process-contents/enrolcontent.html
+++ b/process-contents/enrolcontent.html
@@ -15,7 +15,7 @@
   <p>Get enrolment form from the Student Assistant in-charge
     at the given designated area of the school.</p>
   <h5>What You'll Need:</h5>
-  <ul class="collapsible-content">
+  <ul class="sublist-content">
     <li>
       <h5 class="collapsible-header">Old Students</h5>
       <ul class="collapsible-panel">
@@ -45,7 +45,7 @@
 <div id="content-2" class="content">
   <h5>What To Do:</h5>
   <p>Fill out necessary information in the Enrolment Form and seek advice from the Registrar for the subject loading. <br> Look for:</p>
-  <ul class="listed-content">
+  <ul class="sublist-content">
     <li>
       <strong>Engr. Arnulfo M. Distor Sr.</strong> for Engineering, Accountancy, Computer Science & Hospitality Management
     </li>
@@ -63,7 +63,7 @@
   <h5>Where To Go:</h5>
   <p>1st Floor, Building D</p>
   <h5>What You'll Need:</h5>
-  <ul class="listed-content">
+  <ul class="sublist-content">
     <li><h5>Old Students</h5>
       <ul>
         <li>School Identification Card (ID)</li>
@@ -75,7 +75,7 @@
   <h5>Where To Go:</h5>
   <p>1st Floor, Building B</p>
   <h5>What You'll Need:</h5>
-  <ul class="listed-content">
+  <ul class="sublist-content">
     <li><h5>Old Students</h5>
       <ul>
         <li>Final Clearance and Blue Form of previous semester</li>
@@ -91,14 +91,14 @@
   <h5>Where To Go:</h5>
   <p>2nd Floor, Building A</p>
   <h5>What You'll Need:</h5>
-    <ul class="listed-content">
-      <li><h5>Old Students</h5>
-        <ul>
+    <ul class="sublist-content">
+      <li><h5 class="collapsible-header">Old Students</h5>
+        <ul class="collapsible-panel">
           <li>Blue Form of previous semester</li>
         </ul>
       </li>
-      <li><h5>Freshmen and Transferees</h5>
-        <ul>
+      <li><h5 class="collapsible-header">Freshmen and Transferees</h5>
+        <ul class="collapsible-panel">
           <li>1 long white folder</li>
           <li>1 copy of 1x1 ID picture</li>
           <li>Accomplishment of Student Information Sheet</li>
@@ -110,14 +110,14 @@
   <h5>Where To Go:</h5>
   <p>4th Floor, Building C</p>
   <h5>What You'll Need:</h5>
-  <ul class="listed-content">
-    <li><h5>Old Students</h5>
-      <ul>
+  <ul class="sublist-content">
+    <li><h5 class="collapsible-header">Old Students</h5>
+      <ul class="collapsible-panel">
         <li>Blue Form of previous semester</li>
       </ul>
     </li>
-    <li><h5>Freshmen and Transferees</h5>
-      <ul>
+    <li><h5 class="collapsible-header">Freshmen and Transferees</h5>
+      <ul class="collapsible-panel">
         <li>2 copies of 1x1 ID picture</li>
         <li>Blue Form (Officially Enrolled)</li>
         <li>Php 12.00 for lamination</li>
