--- a/enrolment.html
+++ b/enrolment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Enrolment Page: ByStep</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="processpage.css">
     <link rel="stylesheet" href="processcontent.css">
     <script src="content-loading/load-enrol.js"></script>
